# InboxConverge

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FEATURE_SUMMARY.md  LICENSE  MVP.md  Makefile  README.NEW.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_REPORT.md  UI_DOCUMENTATION.md  docker-compose.new.yml  docker-compose.yml  inboxconverge.py  pop3_forwarder.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  test_needed.md
.github/workflows/: ci.yml  docker-build.yml  lint.yml  release.yml  security.yml  test.yml
backend/: .env.example  Dockerfile  alembic.ini  conftest.py  pytest.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_add_notification_columns.py  0002_add_debug_logging.py  0003_add_debug_counter_and_notif_flag.py  0003_add_smtp_sender_email.py  (+1 more)
backend/app/: main.py
backend/tests/: conftest.py
docs/: ARCHITECTURE.md  CODING_PATTERNS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  ERRORS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS_SUMMARY.md  MIGRATION_GUIDE.md  QUICKSTART.md  README_SAAS.md  ROADMAP.md  SECURITY_REPORT.md  SECURITY_SUMMARY.md  TESTING_GUIDE.md  TODO.md  WEB_INTERFACE_GUIDE.md
docs/adr/: 001-celery-background-tasks.md  002-fernet-encryption.md  003-fastapi-web-framework.md  004-postgresql-database.md  005-task-retry-strategy.md  006-key-management.md  007-jwt-authentication.md  008-nextjs-frontend.md  009-gmail-api-delivery.md  010-hybrid-configuration.md
frontend/: Dockerfile  eslint.config.mjs  jest.config.js  jest.config.mjs  package-lock.json  package.json
frontend/src/: instrumentation.ts
frontend/src/lib/: api.ts  (+3 more)
monitoring/: prometheus.yml
(+98 files in other folders)
